--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -4,6 +4,10 @@ html, body {
   padding: 0;
 }
 
+body {
+  background-color: rgba(228, 228, 228, 0.794);
+}
+
 .save-note {
   display: none;
 }
@@ -20,6 +24,7 @@ html, body {
   width: 100%;
   outline: none;
   border: none;
+  background-color: rgba(228, 228, 228, 0.794);
 }
 
 .note-textarea {
